--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div id="mye">
         <div id="box1" class="yt"><h1>Just a Trial</h1></div>
-        <div id="box2" class="yt"><p>I Hope this is Working</p></div>
+        <div id="box2" class="yt">It is Working</div>
     </div>
 </body>
 </html>
