--- a/index.html
+++ b/index.html
@@ -1,13 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Trial Page</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Our Gallery</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div id="mye">
-        <div id="box1" class="yt"><h1>Just a Trial</h1></div>
-        <div id="box2" class="yt">Currently This Page is Under Development</div>
+    <div id="wrapper">
+        <div class="container">
+            <h1>Our Gallary</h1>
+            <div class="gallery">
+                <figure class="card">
+                    <img src="assets/image01.jpg" alt="">
+                    <figcaption>18 March 2024</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image02.jpg" alt="">
+                    <figcaption>18 March 2024</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image03.jpg" alt="">
+                    <figcaption>16 April 2023</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image04.jpg" alt="">
+                    <figcaption>25 September 2023</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image05.jpg" alt="">
+                    <figcaption>25 September 2023</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image06.jpg" alt="">
+                    <figcaption>4 June 2023</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image07.jpg" alt="">
+                    <figcaption>4 June 2023</figcaption>
+                </figure>
+                
+                <figure class="card">
+                    <img src="assets/image08.jpg" alt="">
+                    <figcaption>16 April 2023</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image09.jpg" alt="">
+                    <figcaption>16 April 2023</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image10.jpg" alt="">
+                    <figcaption>16 April 2023</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image11.jpg" alt="">
+                    <figcaption>16 April 2023</figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/image12.jpg" alt="">
+                    <figcaption>24 November 2023</figcaption>
+                </figure>
+            </div>
+        </div>
     </div>
 </body>
 </html>
