--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="wrapper">
         <div class="container">
-            <h1>Our Gallary</h1>
+            <h1>Our Gallery</h1>
             <div class="gallery">
                 <figure class="card">
                     <img src="assets/image01.jpg" alt="">
